updated res types to structs
