# docs/swagger.yaml
@@ -7,6 +7,17 @@ definitions:
     required:
     - user_id
     type: object
+  models.Action:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: string
+      status:
+        type: string
+      user:
+        type: string
+    type: object
   models.ApproveRejectRequest:
     properties:
       request_id:
@@ -42,6 +53,66 @@ definitions:
     - PREVENTION
     - ADMINISTRATIVE
     - FINANCE
+  models.Check_Request:
+    properties:
+      action_history:
+        items:
+          $ref: '#/definitions/models.Action'
+        type: array
+      category:
+        $ref: '#/definitions/models.Category'
+      created_at:
+        type: string
+      credit_card:
+        type: string
+      current_status:
+        type: string
+      current_user:
+        type: string
+      date:
+        type: string
+      description:
+        type: string
+      grant_id:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      last_user_before_reject:
+        type: string
+      order_total:
+        type: number
+      purchases:
+        items:
+          $ref: '#/definitions/models.Purchase'
+        type: array
+      receipts:
+        items:
+          type: string
+        type: array
+      user_id:
+        type: string
+      vendor:
+        $ref: '#/definitions/models.Vendor'
+    type: object
+  models.Check_Request_Overview:
+    properties:
+      current_status:
+        type: string
+      current_user:
+        type: string
+      date:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      order_total:
+        type: number
+      user_id:
+        type: string
+    type: object
   models.CheckRequestInput:
     properties:
       category:
@@ -232,6 +303,81 @@ definitions:
     required:
     - id
     type: object
+  models.IncompleteAction:
+    properties:
+      action_id:
+        type: string
+      id:
+        type: string
+      request_id:
+        type: string
+      request_type:
+        type: string
+      user_id:
+        type: string
+    type: object
+  models.Mileage_Overview:
+    properties:
+      current_status:
+        type: string
+      current_user:
+        type: string
+      date:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      reimbursement:
+        type: number
+      user_id:
+        type: string
+    type: object
+  models.Mileage_Request:
+    properties:
+      action_history:
+        items:
+          $ref: '#/definitions/models.Action'
+        type: array
+      category:
+        $ref: '#/definitions/models.Category'
+      created_at:
+        type: string
+      current_status:
+        type: string
+      current_user:
+        type: string
+      date:
+        type: string
+      destination:
+        type: string
+      end_odometer:
+        type: integer
+      grant_id:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      last_user_before_reject:
+        type: string
+      parking:
+        type: number
+      reimbursement:
+        type: number
+      start_odometer:
+        type: integer
+      starting_location:
+        type: string
+      tolls:
+        type: number
+      trip_mileage:
+        type: integer
+      trip_purpose:
+        type: string
+      user_id:
+        type: string
+    type: object
   models.MileageInput:
     properties:
       category:
@@ -304,6 +450,58 @@ definitions:
     - month
     - year
     type: object
+  models.Petty_Cash_Overview:
+    properties:
+      amount:
+        type: number
+      current_status:
+        type: string
+      current_user:
+        type: string
+      date:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      user_id:
+        type: string
+    type: object
+  models.Petty_Cash_Request:
+    properties:
+      action_history:
+        items:
+          $ref: '#/definitions/models.Action'
+        type: array
+      amount:
+        type: number
+      category:
+        $ref: '#/definitions/models.Category'
+      created_at:
+        type: string
+      current_status:
+        type: string
+      current_user:
+        type: string
+      date:
+        type: string
+      description:
+        type: string
+      grant_id:
+        type: string
+      id:
+        type: string
+      is_active:
+        type: boolean
+      last_user_before_reject:
+        type: string
+      receipts:
+        items:
+          type: string
+        type: array
+      user_id:
+        type: string
+    type: object
   models.PettyCashInput:
     properties:
       amount:
@@ -327,6 +525,45 @@ definitions:
     - description
     - grant_id
     - receipts
+    type: object
+  models.PublicInfo:
+    properties:
+      admin:
+        type: boolean
+      check_requests:
+        items:
+          $ref: '#/definitions/models.Check_Request_Overview'
+        type: array
+      email:
+        type: string
+      id:
+        type: string
+      incomplete_actions:
+        items:
+          $ref: '#/definitions/models.IncompleteAction'
+        type: array
+      is_active:
+        type: boolean
+      last_login:
+        type: string
+      mileage_requests:
+        items:
+          $ref: '#/definitions/models.Mileage_Overview'
+        type: array
+      name:
+        type: string
+      permissions:
+        items:
+          type: string
+        type: array
+      petty_cash_requests:
+        items:
+          $ref: '#/definitions/models.Petty_Cash_Overview'
+        type: array
+      vehicles:
+        items:
+          $ref: '#/definitions/models.Vehicle'
+        type: array
     type: object
   models.Purchase:
     properties:
@@ -387,12 +624,76 @@ definitions:
     - address_line_one
     - name
     type: object
+  responses.CheckRequestRes:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/models.Check_Request'
+        type: array
+      status:
+        type: string
+      string:
+        type: string
+    type: object
+  responses.MileageRes:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/models.Mileage_Request'
+        type: array
+      status:
+        type: string
+      string:
+        type: string
+    type: object
+  responses.MyInfoRes:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/models.PublicInfo'
+      status:
+        type: string
+      string:
+        type: string
+    type: object
+  responses.PettyCashRes:
+    properties:
+      code:
+        type: integer
+      data:
+        items:
+          $ref: '#/definitions/models.Petty_Cash_Request'
+        type: array
+      status:
+        type: string
+      string:
+        type: string
+    type: object
+  responses.VehicleRes:
+    properties:
+      code:
+        type: integer
+      data:
+        $ref: '#/definitions/models.Vehicle'
+      status:
+        type: string
+      string:
+        type: string
+    type: object
 info:
   contact:
     email: app_support@norainc.org
     name: APP Support
-  description: This is an API Endpoint for handling organizational financial reimbursement
+  description: An API Endpoint for handling organizational financial reimbursement
     requests
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
   title: Financial Request Handler API
   version: "2.0"
 paths:
@@ -704,6 +1005,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.MyInfoRes'
       summary: get my info
       tags:
       - user
@@ -718,6 +1021,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.CheckRequestRes'
       summary: get my check reqs
       tags:
       - user
@@ -733,6 +1038,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.MileageRes'
       summary: get my mileage reqs
       tags:
       - user
@@ -748,6 +1055,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.PettyCashRes'
       summary: get my petty cash reqs
       tags:
       - user
@@ -769,6 +1078,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.VehicleRes'
       summary: remove a vehicle
       tags:
       - user
@@ -788,6 +1099,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.VehicleRes'
       summary: add a vehicle
       tags:
       - user
@@ -807,6 +1120,8 @@ paths:
       responses:
         "200":
           description: OK
+          schema:
+            $ref: '#/definitions/responses.VehicleRes'
       summary: edit a vehicle
       tags:
       - user
