# responses/me.go
@@ -2,63 +2,75 @@ package responses
 
 import (
 	"financial-api/models"
-
-	"github.com/gofiber/fiber/v2"
 )
 
-func MyInfo(my_info models.PublicInfo) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Found the following request and user info for " + my_info.Name,
-		"data":    my_info,
+type MyInfoRes struct {
+	Status  string            `json:"status"`
+	Code    int               `json:"code"`
+	Message string            `json:"string"`
+	Data    models.PublicInfo `json:"data"`
+}
+
+type VehicleRes struct {
+	Status  string         `json:"status"`
+	Code    int            `json:"code"`
+	Message string         `json:"string"`
+	Data    models.Vehicle `json:"data"`
+}
+
+func MyInfo(my_info models.PublicInfo) MyInfoRes {
+	return MyInfoRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Found the following request and user info for " + my_info.Name,
+		Data:    my_info,
 	}
 }
-func MyMileage(requests []models.Mileage_Request) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Your mileage request information",
-		"data":    requests,
+func MyMileage(requests []models.Mileage_Request) MileagesRes {
+	return MileagesRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Your mileage request information",
+		Data:    requests,
 	}
 }
-func MyCheckRequests(requests []models.Check_Request) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Your check request information",
-		"data":    requests,
+func MyCheckRequests(requests []models.Check_Request) CheckRequestsRes {
+	return CheckRequestsRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Your check request information",
+		Data:    requests,
 	}
 }
-func MyPettyCash(requests []models.Petty_Cash_Request) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "You petty cash requests",
-		"data":    requests,
+func MyPettyCash(requests []models.Petty_Cash_Request) PettyCashRequestsRes {
+	return PettyCashRequestsRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "You petty cash requests",
+		Data:    requests,
 	}
 }
-func AddVehicle(vehicle models.Vehicle) fiber.Map {
-	return fiber.Map{
-		"status":  "CREATED",
-		"code":    201,
-		"message": "New vehicle added to your account",
-		"data":    vehicle,
+func AddVehicle(vehicle models.Vehicle) VehicleRes {
+	return VehicleRes{
+		Status:  "CREATED",
+		Code:    201,
+		Message: "New vehicle added to your account",
+		Data:    vehicle,
 	}
 }
-func EditVehicle(vehicle models.Vehicle) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Vehicle " + vehicle.ID + " successfully saved",
-		"data":    vehicle,
+func EditVehicle(vehicle models.Vehicle) VehicleRes {
+	return VehicleRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Vehicle " + vehicle.ID + " successfully saved",
+		Data:    vehicle,
 	}
 }
-func RemoveVehicle(vehicle models.Vehicle) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Vehicle " + vehicle.Name + " removed from account",
-		"data":    vehicle,
+func RemoveVehicle(vehicle models.Vehicle) VehicleRes {
+	return VehicleRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Vehicle " + vehicle.Name + " removed from account",
+		Data:    vehicle,
 	}
 }
