# responses/mileage.go
@@ -9,60 +9,85 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
-func CreateMileage(mileage_info models.Mileage_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "CREATED",
-		"code":    201,
-		"message": "Mileage Request Successfully created @ " + methods.TimeNowFormat(),
-		"data":    mileage_info,
+type MileageOverviewRes struct {
+	Status  string                  `json:"status"`
+	Code    int                     `json:"code"`
+	Message string                  `json:"string"`
+	Data    models.Mileage_Overview `json:"data"`
+}
+type MileageOverviewsRes struct {
+	Status  string                    `json:"status"`
+	Code    int                       `json:"code"`
+	Message string                    `json:"string"`
+	Data    []models.Mileage_Overview `json:"data"`
+}
+type MileagesRes struct {
+	Status  string                   `json:"status"`
+	Code    int                      `json:"code"`
+	Message string                   `json:"string"`
+	Data    []models.Mileage_Request `json:"data"`
+}
+type MileageRes struct {
+	Status  string                 `json:"status"`
+	Code    int                    `json:"code"`
+	Message string                 `json:"string"`
+	Data    models.Mileage_Request `json:"data"`
+}
+
+func CreateMileage(mileage_info models.Mileage_Overview) MileageOverviewRes {
+	return MileageOverviewRes{
+		Status:  "CREATED",
+		Code:    201,
+		Message: "Mileage Request Successfully created @ " + methods.TimeNowFormat(),
+		Data:    mileage_info,
 	}
 }
-func MileageDetail(mileage_info models.Mileage_Request) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Mileage Request with " + mileage_info.ID + " Found",
-		"data":    mileage_info,
+func MileageDetail(mileage_info models.Mileage_Request) MileageRes {
+	return MileageRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Mileage Request with " + mileage_info.ID + " Found",
+		Data:    mileage_info,
 	}
 }
-func EditMileage(mileage_info models.Mileage_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Mileage Request " + mileage_info.ID + " has been EDITED",
-		"data":    mileage_info,
+func EditMileage(mileage_info models.Mileage_Overview) MileageOverviewRes {
+	return MileageOverviewRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Mileage Request " + mileage_info.ID + " has been EDITED",
+		Data:    mileage_info,
 	}
 }
-func DeleteMileage(mileage_info models.Mileage_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Mileage Request " + mileage_info.ID + " has been DELETED",
-		"data":    mileage_info,
+func DeleteMileage(mileage_info models.Mileage_Overview) MileageOverviewRes {
+	return MileageOverviewRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Mileage Request " + mileage_info.ID + " has been DELETED",
+		Data:    mileage_info,
 	}
 }
-func ApproveMileage(mileage_info models.Mileage_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Mileage Request " + mileage_info.ID + " has been APPROVED",
-		"data":    mileage_info,
+func ApproveMileage(mileage_info models.Mileage_Overview) MileageOverviewRes {
+	return MileageOverviewRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Mileage Request " + mileage_info.ID + " has been APPROVED",
+		Data:    mileage_info,
 	}
 }
-func RejectMileage(mileage_info models.Mileage_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Mileage Request " + mileage_info.ID + " has been REJECTED",
-		"data":    mileage_info,
+func RejectMileage(mileage_info models.Mileage_Overview) MileageOverviewRes {
+	return MileageOverviewRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Mileage Request " + mileage_info.ID + " has been REJECTED",
+		Data:    mileage_info,
 	}
 }
-func MonthlyMileage(month int, year int, mileage_info []models.Mileage_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Monthly Mileage Report for " + time.Month(month).String() + ", " + strconv.Itoa(year),
-		"data":    mileage_info,
+func MonthlyMileage(month int, year int, mileage_info []models.Mileage_Overview) MileageOverviewsRes {
+	return MileageOverviewsRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Monthly Mileage Report for " + time.Month(month).String() + ", " + strconv.Itoa(year),
+		Data:    mileage_info,
 	}
 }
 func MileageVariance() fiber.Map {
