# responses/user.go
@@ -2,55 +2,66 @@ package responses
 
 import (
 	"financial-api/models"
-
-	"github.com/gofiber/fiber/v2"
 )
 
-func AllUsers(user_info []models.PublicInfo) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "All user data",
-		"data":    user_info,
+type UsersInfoRes struct {
+	Status  string              `json:"status"`
+	Code    int                 `json:"code"`
+	Message string              `json:"string"`
+	Data    []models.PublicInfo `json:"data"`
+}
+type UserInfoRes struct {
+	Status  string            `json:"status"`
+	Code    int               `json:"code"`
+	Message string            `json:"string"`
+	Data    models.PublicInfo `json:"data"`
+}
+
+func AllUsers(user_info []models.PublicInfo) UsersInfoRes {
+	return UsersInfoRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "All user data",
+		Data:    user_info,
 	}
 }
-func OneUser(user_info models.PublicInfo) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Overview information for " + user_info.ID,
-		"data":    user_info,
+func OneUser(user_info models.PublicInfo) UserInfoRes {
+	return UserInfoRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Overview information for " + user_info.ID,
+		Data:    user_info,
 	}
 }
-func DeactivateUser(user_info models.PublicInfo) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "User " + user_info.Name + "'s account has been deactivated",
-		"data":    nil,
+func DeactivateUser(user_info models.PublicInfo) NilRes {
+	return NilRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "User " + user_info.Name + "'s account has been deactivated",
+		Data:    "null",
 	}
 }
-func UserMileage(user_id string, user_info []models.Mileage_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Mileage Requests for User " + user_id,
-		"data":    user_info,
+func UserMileage(user_id string, user_info []models.Mileage_Overview) MileageOverviewsRes {
+	return MileageOverviewsRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Mileage Requests for User " + user_id,
+		Data:    user_info,
 	}
 }
-func UserPettyCash(user_id string, user_info []models.Petty_Cash_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Petty Cash Requests for User " + user_id,
-		"data":    user_info,
+func UserPettyCash(user_id string, user_info []models.Petty_Cash_Overview) PettyCashOverviewsRes {
+	return PettyCashOverviewsRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Petty Cash Requests for User " + user_id,
+		Data:    user_info,
 	}
 }
-func UserCheckRequests(user_id string, user_info []models.Check_Request_Overview) fiber.Map {
-	return fiber.Map{
-		"status":  "OK",
-		"code":    200,
-		"message": "Check Requests for User " + user_id,
-		"data":    user_info,
+func UserCheckRequests(user_id string, user_info []models.Check_Request_Overview) CheckOverviewsRes {
+	return CheckOverviewsRes{
+		Status:  "OK",
+		Code:    200,
+		Message: "Check Requests for User " + user_id,
+		Data:    user_info,
 	}
 }
